[gd_scene load_steps=11 format=3 uid="uid://t6bi5r04vgmh"]

[ext_resource type="Script" path="res://scene/scene/battle/ui/battle_reward_popup.gd" id="1_r813q"]
[ext_resource type="Texture2D" uid="uid://dy62xxu35mgtd" path="res://art/ui/window/RectangleBox_96x96.png" id="2_ffqy6"]
[ext_resource type="Texture2D" uid="uid://hbsbm106ikyv" path="res://art/ui/window/TitleBox_64x16.png" id="3_15eex"]
[ext_resource type="FontFile" uid="uid://cyh4qjrj0p4r" path="res://art/font/logotypegothic.otf" id="4_82wp4"]
[ext_resource type="LabelSettings" uid="uid://f2kwubcmdrkq" path="res://art/settings/label_settings_reward_title.tres" id="5_air2c"]
[ext_resource type="Texture2D" uid="uid://c34hbduefwx1p" path="res://art/icon/atlas_texture_rpg_weapon_tool.tres" id="6_nx1v3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_byba4"]
atlas = ExtResource("6_nx1v3")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg607"]
atlas = ExtResource("6_nx1v3")
region = Rect2(480, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6w7b"]
atlas = ExtResource("6_nx1v3")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivj3b"]
atlas = ExtResource("6_nx1v3")
region = Rect2(64, 64, 32, 32)

[node name="BattleRewardPopup" type="Node2D"]
script = ExtResource("1_r813q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -160.0
offset_right = 150.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ffqy6")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer_Title" type="MarginContainer" parent="CanvasLayer/ColorRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = -20.0
offset_right = 77.5
offset_bottom = 25.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ColorRect/NinePatchRect/MarginContainer_Title"]
layout_mode = 2
texture = ExtResource("3_15eex")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect/NinePatchRect/MarginContainer_Title"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect/NinePatchRect/MarginContainer_Title/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ColorRect/NinePatchRect/MarginContainer_Title/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_82wp4")
theme_override_font_sizes/font_size = 0
text = "GET_REWARD"
label_settings = ExtResource("5_air2c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer_Body" type="MarginContainer" parent="CanvasLayer/ColorRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect/NinePatchRect/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Button_Coin" type="Button" parent="CanvasLayer/ColorRect/NinePatchRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "REWARD_GOLD"
icon = SubResource("AtlasTexture_byba4")

[node name="Button_Card" type="Button" parent="CanvasLayer/ColorRect/NinePatchRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "REWARD_GET_CARD"
icon = SubResource("AtlasTexture_xg607")

[node name="Button_Item" type="Button" parent="CanvasLayer/ColorRect/NinePatchRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "REWARD_GET_ITEM"
icon = SubResource("AtlasTexture_p6w7b")

[node name="Button_Treasure" type="Button" parent="CanvasLayer/ColorRect/NinePatchRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "REWARD_GET_TREASURE"
icon = SubResource("AtlasTexture_ivj3b")

[node name="Control_RewardSelectCard" type="Control" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer"]
layout_mode = 2

[node name="MarginContainer_Title" type="MarginContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer/MarginContainer_Title"]
layout_mode = 2
texture = ExtResource("3_15eex")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer/MarginContainer_Title"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer/MarginContainer_Title/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer/MarginContainer_Title/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_82wp4")
theme_override_font_sizes/font_size = 0
text = "REWARD_GET_CARD_NUM"
label_settings = ExtResource("5_air2c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer_CardsArea" type="MarginContainer" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 450)
layout_mode = 2

[node name="Button_Skip" type="Button" parent="CanvasLayer/ColorRect/Control_RewardSelectCard/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "REWARD_GET_CARD_SKIP"
